@@ -16,6 +16,7 @@
 \alias{annotation,GenomicMethylSet-method}
 \alias{preprocessMethod,GenomicMethylSet-method}
 \alias{mapToGenome,GenomicMethylSet-method}
+\alias{combine,GenomicMethylSet,GenomicMethylSet-method}
 
 \title{GenomicMethylSet instances}
 
@@ -105,6 +106,8 @@ arguments outlined above.
     \item{\code{mapToGenome(object)}}{ Since \code{object} is already
  	mapped to the genome, this method simply returns \code{object}
 	unchanged.}
+    \item{\code{combine}:}{Combines two different \code{GenomicMethylSet},
+      eventually using the \code{cbind} method for \code{SummarizedExperiment}.}
   }
 }
 
